# dev-table

./: .gitignore  README.md  environment.yml
Beam Profiling/: beam_size_fitter.py  camera_fitter.py  knife_edge_fitter.py  oap_focusing.rez  opa_pump_focusing.rez  opa_seed_focusing.rez  spot_size.ipynb
Demos/: ftir.ipynb  spectroscopy.ipynb
Dual Comb/: RubidiumProcessing_Oct2025.py  apd_mult_optimization.ipynb  axis_uncertainty_calc.ipynb  correc_temp.py  dcs_analyzer_cepstral_plotter.py  dcs_analyzer_plotter.py  full_I2_analysis.ipynb  full_Na_analysis.ipynb  full_Rb_analysis.ipynb  ifg_plot.py  igm_viewer.py  interferogram_plot.ipynb  line_fit.py  line_fit_rel.ipynb  line_plot_apriori.py  mode_no.ipynb  mode_no.py  noise_scaling.ipynb  noise_scaling.py  plot_pug_ifg.py  rin.ipynb  snr.py  uncertainty_propagation.nb
HNLF Simulation/: laser_fun_sim.py  pyNLO_simulation.py  test_simulation.py
Interferometer/: tilted_window_delay_compensation.py
OPA Calculations/: beam_size_fitter.py
Plotting/: broadcom_spec_plotter.py  cleo_paper_plots.ipynb  combo_plotter.py  counter_plotter.py  frog_plotter.py  hp_plotter.py  opa_power_vs_polling_vs_rep_rate.py  opa_seed_paper_plots.ipynb  paper_plots.ipynb  power_vs_rr.py  pulse_overlay.py  rep_rate_spectrum_plotter.py  rf_plotter.py  scope_plotter.py  spectrum_multiplotter.py  spectrum_plotter.py  yoko_plotter.py
Pulse Analysis/: transform_limit.py
plottools/: pyproject.toml
plottools/src/plottools/: frogdata.py  plotting_utils.py  spectrometerdata.py
plottools/src/plottools_allisonlab/: spectrometerdata.py
(+12 files in other folders)
